@@ -40,11 +40,15 @@ Steps:
   - Run 'ant library'. This generates additional Java coded
     necessary to compile.
   - Create a new project.
-  - Add hamcrest-api/src/main, hamcrest-library/src/main,
-    hamcrest-generator/src/main, hamcrest-integration/src/main,
-    and build/generated-code as source directories.
-  - Add hamcrest-unit-test/src/main as a test directory. If this is
-    unsupported by the IDE, add it as another source
+  - Add the following directories as source directories:
+      hamcrest-core/src/main/java
+      hamcrest-library/src/main/java
+      hamcrest-generator/src/main/java
+      hamcrest-integration/src/main/java
+      build/hamcrest-core/generated-code
+      build/hamcrest-library/generated-code
+  - Add hamcrest-unit-test/src/main/java as a test directory.
+    If this is unsupported by the IDE, add it as another source
     directory.
   - Include all jars in the lib directory in the classpath.
   - Compile as usual in the IDE.
