@@ -1,0 +1,15 @@
+<matchers>
+
+    <!-- Core -->
+    <factory class="org.hamcrest.core.Is"/>
+    <factory class="org.hamcrest.core.IsNot"/>
+    <factory class="org.hamcrest.core.IsEqual"/>
+    <factory class="org.hamcrest.core.IsInstanceOf"/>
+    <factory class="org.hamcrest.core.AllOf"/>
+    <factory class="org.hamcrest.core.AnyOf"/>
+    <factory class="org.hamcrest.core.IsSame"/>
+    <factory class="org.hamcrest.core.IsAnything"/>
+    <factory class="org.hamcrest.core.IsNull"/>
+    <factory class="org.hamcrest.core.DescribedAs"/>
+
+</matchers>
