@@ -1,6 +1,7 @@
 package org.hamcrest;
 
 import org.hamcrest.integration.EasyMock2Adapter;
+import org.hamcrest.core.IsEqual;
 
 /**
  *
@@ -9,7 +10,7 @@ import org.hamcrest.integration.EasyMock2Adapter;
 public class EasyMock2Matchers {
 
     public static String equalTo(String string) {
-        EasyMock2Adapter.adapt(Matchers.equalTo(string));
+        EasyMock2Adapter.adapt(IsEqual.equalTo(string));
         return null;
     }
 
